// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rules generation snapshots (refactor safety net) > produces stable rules for express-api 1`] = `
[
  {
    "content": "---
description: Express API route handlers, middleware, and endpoint conventions
alwaysApply: false
globs: src/routes/**, src/api/**
---


# API Routing Guidelines

See also: @global-rules.mdc

## Project Stack

**Routing system**: Express  
**Route type**: Programmatic routing (code-defined)  
**Route location**: \`@src/routes/\`, \`@src/api/\`

## API Route Organization

**Organization pattern**: Centralized
**URL naming**: kebab-case

## RESTful API Design

Project APIs follow RESTful design principles:

- \`GET /resources\` - List resources
- \`GET /resources/:id\` - Get a single resource
- \`POST /resources\` - Create a resource
- \`PUT /resources/:id\` - Update a resource
- \`DELETE /resources/:id\` - Delete a resource

## Adding New API Routes

### Steps

1. Create or select a module file in the \`routes/\` directory
2. Define route handlers
3. Export using \`express.Router()\`
4. Register the route in the main entry file

## Short-term Guidelines

✅ Maintain RESTful API design principles
✅ Follow existing route organization patterns


---

*API routes should follow RESTful design with clear resource organization.*
",
    "fileName": "api-routing.mdc",
  },
  {
    "content": "---
description: Code style, formatting, and naming conventions derived from project config
alwaysApply: false
globs: **/*.{ts,tsx,js,jsx}
---


# Code Style

## Code Style (Project Config)

### Current Project Practices (from analysis)

Match the style of existing code when generating new code:

- **Variable declarations**: use const/let
- **Function style**: function declarations
- **String quotes**: single quotes
- **Semicolons**: use

### Run After Code Generation

\`\`\`bash
# Type check
npm run build
\`\`\`



## Do / Don't

\`\`\`typescript
// DON'T: use any — loses type safety
function process(data: any) { return data.value; }

// DO: use precise types
function process(data: ProcessInput): ProcessOutput {
  return data.value;
}
\`\`\`

\`\`\`typescript
// DON'T: implicit typing + mutable default
var count = 0;

// DO: explicit types + prefer immutability
const count: number = 0;
\`\`\`


## Additional Best Practices

### Code Style:

Utilize TypeScript's type system fully: use interfaces, type aliases, and generics where appropriate

**Related Tech Stack**: TypeScript

",
    "fileName": "code-style.mdc",
  },
  {
    "content": "---
description: Project-wide conventions, tech stack, and core development principles. Always loaded.
alwaysApply: true
---

# express-api

You are an expert in Express, TypeScript with deep knowledge of backend development best practices.

## Tech Stack

**Primary**: Express ^4.19.0, TypeScript ^5.4.0  
**Languages**: JavaScript, TypeScript  
**Package Manager**: npm  
**Frameworks**: Express ^4.19.0

## Commands

| Task | Command |
|------|---------|
| Build | \`npm run build\` |
| Start | \`npm run start\` |
| Type Check | \`npm run build\` |

## Hard Constraints

- NEVER use \`any\` type. Use \`unknown\` and narrow with type guards.
- NEVER swallow errors with empty catch blocks. Log and re-throw or handle explicitly.
- NEVER create duplicate utilities. Check @custom-tools.mdc before writing helpers.
- NEVER generate markdown documentation files — express intent through code, types, and naming.
- Before creating files, consult @project-structure.mdc for correct location.
- Reuse existing project tools — do not re-implement what already exists.
- Follow the project's established patterns and conventions.
- After writing code, run \`npm run build\` before considering the task complete.


- Follow the framework's official best practices

## Rule Index

| Rule | Scope |
|------|-------|
| @code-style.mdc | Formatting and naming conventions |
| @project-structure.mdc | Directory layout and file placement |
| @api-routing.mdc | API endpoint conventions |
| @testing.mdc | Testing and verification commands |

",
    "fileName": "global-rules.mdc",
  },
  {
    "content": "---
description: Consult when creating new files or directories to determine correct location and naming conventions
alwaysApply: false
globs: **/index.{ts,tsx,js,jsx}
---


# Project Structure

See also: @global-rules.mdc

## 📁 Directory Tree

Main project directory structure:

\`\`\`text
└── src/ # source code
    ├── controllers/ # controller layer
    └── routes/ # route definitions
\`\`\`


## 📋 Directory Purpose Reference

Detailed purpose for important directories, including file types and naming conventions:

> 💡 See @code-style.mdc for naming conventions and code style

### \`src/controllers/\`

**Purpose**: controller layer

- Sample files: \`userController.ts\`

### \`src/routes/\`

**Purpose**: route definitions

- Sample files: \`users.ts\`


## 🎯 File Organization (Quick Reference)

Common file type locations for quick lookup:


## ✨ New File Guidelines

### File Location Decision Table

> When creating a new file, use this table to find the correct directory; if unsure, follow a similar existing file.

| File type | Location | Example filename |
|-----------|----------|------------------|




---
*Before creating new files, see this file for correct directory locations and naming conventions.*
",
    "fileName": "project-structure.mdc",
  },
  {
    "content": "---
description: Testing recommendations for the project
alwaysApply: false
globs: **/*.{test,spec}.{ts,tsx,js,jsx}
---


# Testing

## Verification

| Task | Command |
|------|---------|
| Type Check | \`npm run build\` |

Run these commands after code changes to verify correctness.

> ⚠️ No test framework configured. When adding tests, follow the project's tech stack conventions.


",
    "fileName": "testing.mdc",
  },
]
`;

exports[`rules generation snapshots (refactor safety net) > produces stable rules for react-antd 1`] = `
[
  {
    "content": "---
description: Code style, formatting, and naming conventions derived from project config
alwaysApply: false
globs: **/*.{ts,tsx,js,jsx}
---


# Code Style

## Code Style (Project Config)

### Current Project Practices (from analysis)

Match the style of existing code when generating new code:

- **Variable declarations**: use const/let
- **Function style**: arrow functions

### Run After Code Generation

\`\`\`bash
# Type check
npm run build
\`\`\`



## Do / Don't

\`\`\`typescript
// DON'T: use any — loses type safety
function process(data: any) { return data.value; }

// DO: use precise types
function process(data: ProcessInput): ProcessOutput {
  return data.value;
}
\`\`\`

\`\`\`typescript
// DON'T: implicit typing + mutable default
var count = 0;

// DO: explicit types + prefer immutability
const count: number = 0;
\`\`\`


## Additional Best Practices

### Code Style:

Utilize TypeScript's type system fully: use interfaces, type aliases, and generics where appropriate

**Related Tech Stack**: TypeScript

",
    "fileName": "code-style.mdc",
  },
  {
    "content": "---
description: Step-by-step recipe for adding a complete feature: types → API → component → route
alwaysApply: false
---


# End-to-End Feature Creation Guide

> When adding a complete feature, create files in this order to avoid gaps.
> Examples below use **Feature** as a representative module — adapt names to your actual feature.

## Standard Steps

### 1. Type Definitions

\`\`\`ts
// src/types/feature.ts
export interface FeatureItem {
  id: string;
  name: string;
  // ...actual project fields
}

export interface FeatureListParams {
  page: number;
  pageSize: number;
}
\`\`\`

### 2. API Functions

\`\`\`ts
// src/api/feature.ts
import type { FeatureItem, FeatureListParams } from "@/types/feature";


export const fetchFeatureList = (params: FeatureListParams) => {
  return fetch(\`/api/features?page=\${params.page}\`);
};
\`\`\`

### 3. Reusable Hook (Optional)

\`\`\`ts
// src/hooks/useFeature.ts
export function useFeature(id: string) {
  // Encapsulate data fetching, loading state, and error handling
  // Components call this directly; don't duplicate fetch logic
}
\`\`\`

### 4. Page Component

\`\`\`tsx
// src/components/FeatureList/FeatureList.tsx
// Rendering only; business logic lives in Hook / Store
export function FeatureList() {
  // 1. Get data from store/hook
  // 2. Handle loading / error states
  // 3. Render the list
}
\`\`\`

### 5. Route Registration

\`\`\`tsx
// src/routes/index.tsx or route config file
{ path: "/features", element: <FeatureList /> }
{ path: "/features/:id", element: <FeatureDetail /> }
\`\`\`

## File Checklist

After adding a feature, confirm the following files were created/updated:

- [ ] \`src/types/feature.ts\` — Type definitions
- [ ] \`src/api/feature.ts\` — API functions
- [ ] \`src/hooks/useFeature.ts\` — Data hook (optional)
- [ ] \`src/components/FeatureList/\` — Page component
- [ ] Route config updated

---

*Follow this pattern for project consistency. See @project-structure.mdc for actual directory locations.*
",
    "fileName": "feature-recipe.mdc",
  },
  {
    "content": "---
description: Project-wide conventions, tech stack, and core development principles. Always loaded.
alwaysApply: true
---

# react-antd

You are an expert in React, TypeScript with deep knowledge of frontend development best practices.

## Tech Stack

**Primary**: React ^18.2.0, TypeScript ^5.4.0  
**Languages**: JavaScript, TypeScript  
**Package Manager**: npm  
**Frameworks**: React ^18.2.0  
**Key Libraries**: antd ^5.12.0

## Commands

| Task | Command |
|------|---------|
| Build | \`npm run build\` |
| Type Check | \`npm run build\` |

## Hard Constraints

- NEVER use \`any\` type. Use \`unknown\` and narrow with type guards.
- NEVER swallow errors with empty catch blocks. Log and re-throw or handle explicitly.
- NEVER create duplicate utilities. Check @custom-tools.mdc before writing helpers.
- NEVER generate markdown documentation files — express intent through code, types, and naming.
- Before creating files, consult @project-structure.mdc for correct location.
- Reuse existing project tools — do not re-implement what already exists.
- Follow the project's established patterns and conventions.
- After writing code, run \`npm run build\` before considering the task complete.


- **React**: 
  - Use function components and Hooks; avoid class components
  - Keep components focused on a single responsibility
  - Use \`useMemo\` and \`useCallback\` judiciously for performance
  - Use TypeScript for type checking


## Rule Index

| Rule | Scope |
|------|-------|
| @code-style.mdc | Formatting and naming conventions |
| @project-structure.mdc | Directory layout and file placement |
| @ui-ux.mdc | UI component and UX patterns |
| @feature-recipe.mdc | End-to-end guide for adding a new feature |
| @testing.mdc | Testing and verification commands |

",
    "fileName": "global-rules.mdc",
  },
  {
    "content": "---
description: Consult when creating new files or directories to determine correct location and naming conventions
alwaysApply: false
globs: **/index.{ts,tsx,js,jsx}
---


# Project Structure

See also: @global-rules.mdc

## 📁 Directory Tree

Main project directory structure:

\`\`\`text
└── src/ # source code
    └── components/ # shared components
\`\`\`


## 📋 Directory Purpose Reference

Detailed purpose for important directories, including file types and naming conventions:

> 💡 See @code-style.mdc for naming conventions and code style

### \`src/components/\`

**Purpose**: shared components

- Sample files: \`UserForm.tsx\`, \`UserTable.tsx\`


## 🎯 File Organization (Quick Reference)

Common file type locations for quick lookup:

### Components

**Location**: \`src/components/\`

**Naming conventions**: PascalCase



## ✨ New File Guidelines

### File Location Decision Table

> When creating a new file, use this table to find the correct directory; if unsure, follow a similar existing file.

| File type | Location | Example filename |
|-----------|----------|------------------|
| Component (incl. pages) | \`src/components/\` | \`UserList.tsx\` |




---
*Before creating new files, see this file for correct directory locations and naming conventions.*
",
    "fileName": "project-structure.mdc",
  },
  {
    "content": "---
description: Testing recommendations for the project
alwaysApply: false
globs: **/*.{test,spec}.{ts,tsx,js,jsx}
---


# Testing

## Verification

| Task | Command |
|------|---------|
| Type Check | \`npm run build\` |

Run these commands after code changes to verify correctness.

> ⚠️ No test framework configured. When adding tests, follow the project's tech stack conventions.


",
    "fileName": "testing.mdc",
  },
  {
    "content": "---
description: UI component patterns and conventions for this project's UI library
alwaysApply: false
globs: src/components/**/*.{tsx,jsx}
---


# UI/UX Guidelines

See also: @global-rules.mdc, @code-style.mdc

## Project UI Stack

**Currently using**: antd component library

### Ant Design Conventions

**Do ✅**
\`\`\`tsx
// Prefer antd native APIs — do not re-wrap existing capabilities
import { Table, Form, Modal, Button, Space } from "antd";

// Use Form.useForm() — do not use a raw ref
const [form] = Form.useForm();

// Table pagination via onChange callback
<Table
  dataSource={data}
  columns={columns}
  pagination={{ current, pageSize, total, onChange: handlePageChange }}
/>;
\`\`\`

**Don't ❌**
\`\`\`tsx
// Do not use native <button> instead of antd Button
<button onClick={…}>Submit</button>

// Do not reimplement antd Modal.confirm / message.error
const MyAlert = () => <div className="alert">{msg}</div>;
\`\`\`

### Common Scenarios

| Scenario | Components |
|----------|------------|
| Data lists | \`Table\` |
| Form submission | \`Form\` + \`Form.useForm()\` |
| Confirmation dialogs | \`Modal.confirm()\` |
| Action feedback | \`message.success/error()\` |
| Loading states | \`Spin\` or Table \`loading\` prop |

### Accessibility (A11y) Minimum Requirements

- Interactive elements must have \`aria-label\` or visible text
- Icon buttons must include a \`title\` attribute
- Form fields must be associated with a \`label\` (htmlFor)



---

*UI/UX guidelines ensure good user experience and accessibility.*
",
    "fileName": "ui-ux.mdc",
  },
]
`;

exports[`rules generation snapshots (refactor safety net) > produces stable rules for react-bare 1`] = `
[
  {
    "content": "---
description: Code style, formatting, and naming conventions derived from project config
alwaysApply: false
globs: **/*.{ts,tsx,js,jsx}
---


# Code Style

## Code Style (Project Config)

### Current Project Practices (from analysis)

Match the style of existing code when generating new code:

- **Variable declarations**: use const/let
- **String quotes**: single quotes
- **Semicolons**: use

### Run After Code Generation

\`\`\`bash
# Type check
npm run build
\`\`\`



## Do / Don't

\`\`\`typescript
// DON'T: use any — loses type safety
function process(data: any) { return data.value; }

// DO: use precise types
function process(data: ProcessInput): ProcessOutput {
  return data.value;
}
\`\`\`

\`\`\`typescript
// DON'T: implicit typing + mutable default
var count = 0;

// DO: explicit types + prefer immutability
const count: number = 0;
\`\`\`


## Additional Best Practices

### Code Style:

Utilize TypeScript's type system fully: use interfaces, type aliases, and generics where appropriate

**Related Tech Stack**: TypeScript

",
    "fileName": "code-style.mdc",
  },
  {
    "content": "---
description: Step-by-step recipe for adding a complete feature: types → API → component → route
alwaysApply: false
---


# End-to-End Feature Creation Guide

> When adding a complete feature, create files in this order to avoid gaps.
> Examples below use **Feature** as a representative module — adapt names to your actual feature.

## Standard Steps

### 1. Type Definitions

\`\`\`ts
// src/types/feature.ts
export interface FeatureItem {
  id: string;
  name: string;
  // ...actual project fields
}

export interface FeatureListParams {
  page: number;
  pageSize: number;
}
\`\`\`

### 2. API Functions

\`\`\`ts
// src/api/feature.ts
import type { FeatureItem, FeatureListParams } from "@/types/feature";


export const fetchFeatureList = (params: FeatureListParams) => {
  return fetch(\`/api/features?page=\${params.page}\`);
};
\`\`\`

### 3. Reusable Hook (Optional)

\`\`\`ts
// src/hooks/useFeature.ts
export function useFeature(id: string) {
  // Encapsulate data fetching, loading state, and error handling
  // Components call this directly; don't duplicate fetch logic
}
\`\`\`

### 4. Page Component

\`\`\`tsx
// src/components/FeatureList/FeatureList.tsx
// Rendering only; business logic lives in Hook / Store
export function FeatureList() {
  // 1. Get data from store/hook
  // 2. Handle loading / error states
  // 3. Render the list
}
\`\`\`

### 5. Route Registration

\`\`\`tsx
// src/routes/index.tsx or route config file
{ path: "/features", element: <FeatureList /> }
{ path: "/features/:id", element: <FeatureDetail /> }
\`\`\`

## File Checklist

After adding a feature, confirm the following files were created/updated:

- [ ] \`src/types/feature.ts\` — Type definitions
- [ ] \`src/api/feature.ts\` — API functions
- [ ] \`src/hooks/useFeature.ts\` — Data hook (optional)
- [ ] \`src/components/FeatureList/\` — Page component
- [ ] Route config updated

---

*Follow this pattern for project consistency. See @project-structure.mdc for actual directory locations.*
",
    "fileName": "feature-recipe.mdc",
  },
  {
    "content": "---
description: Project-wide conventions, tech stack, and core development principles. Always loaded.
alwaysApply: true
---

# react-bare

You are an expert in React, TypeScript with deep knowledge of frontend development best practices.

## Tech Stack

**Primary**: React ^18.2.0, TypeScript ^5.4.0  
**Languages**: JavaScript, TypeScript  
**Package Manager**: npm  
**Frameworks**: React ^18.2.0

## Commands

| Task | Command |
|------|---------|
| Build | \`npm run build\` |
| Type Check | \`npm run build\` |

## Hard Constraints

- NEVER use \`any\` type. Use \`unknown\` and narrow with type guards.
- NEVER swallow errors with empty catch blocks. Log and re-throw or handle explicitly.
- NEVER create duplicate utilities. Check @custom-tools.mdc before writing helpers.
- NEVER generate markdown documentation files — express intent through code, types, and naming.
- Before creating files, consult @project-structure.mdc for correct location.
- Reuse existing project tools — do not re-implement what already exists.
- Follow the project's established patterns and conventions.
- After writing code, run \`npm run build\` before considering the task complete.


- **React**: 
  - Use function components and Hooks; avoid class components
  - Keep components focused on a single responsibility
  - Use \`useMemo\` and \`useCallback\` judiciously for performance
  - Use TypeScript for type checking


## Rule Index

| Rule | Scope |
|------|-------|
| @code-style.mdc | Formatting and naming conventions |
| @project-structure.mdc | Directory layout and file placement |
| @feature-recipe.mdc | End-to-end guide for adding a new feature |
| @testing.mdc | Testing and verification commands |

",
    "fileName": "global-rules.mdc",
  },
  {
    "content": "---
description: Consult when creating new files or directories to determine correct location and naming conventions
alwaysApply: false
globs: **/index.{ts,tsx,js,jsx}
---


# Project Structure

See also: @global-rules.mdc

## 📁 Directory Tree

Main project directory structure:

\`\`\`text
└── src/ # source code
\`\`\`


## 📋 Directory Purpose Reference

Detailed purpose for important directories, including file types and naming conventions:

> 💡 See @code-style.mdc for naming conventions and code style


## 🎯 File Organization (Quick Reference)

Common file type locations for quick lookup:


## ✨ New File Guidelines

### File Location Decision Table

> When creating a new file, use this table to find the correct directory; if unsure, follow a similar existing file.

| File type | Location | Example filename |
|-----------|----------|------------------|

### Component Directory Layout

\`\`\`
src/components/ComponentName/
  ├── index.tsx       # Export entry
  ├── ComponentName.tsx # Implementation
  └── ComponentName.test.ts # Test file
\`\`\`




---
*Before creating new files, see this file for correct directory locations and naming conventions.*
",
    "fileName": "project-structure.mdc",
  },
  {
    "content": "---
description: Testing recommendations for the project
alwaysApply: false
globs: **/*.{test,spec}.{ts,tsx,js,jsx}
---


# Testing

## Verification

| Task | Command |
|------|---------|
| Type Check | \`npm run build\` |

Run these commands after code changes to verify correctness.

> ⚠️ No test framework configured. When adding tests, follow the project's tech stack conventions.


",
    "fileName": "testing.mdc",
  },
]
`;

exports[`rules generation snapshots (refactor safety net) > produces stable rules for react-full 1`] = `
[
  {
    "content": "---
description: How to call backend APIs: file location, client usage, error handling
alwaysApply: false
globs: src/api/**
---


# API Call Guidelines

## Core Conventions

- Keep all API functions in \`src/api/\`, split by business module
- **Do not** call \`fetch\`/\`axios.get\` directly in components/stores — use wrapper functions
- Each function does one thing: request + return data (handle side effects at the call site)

## HTTP Client

> ⚠️ Could not auto-detect the project's HTTP client wrapper. Check the project's API request wrapper and ensure calls go through wrapper functions.

## Do / Don't

\`\`\`ts
// ❌ Direct fetch in component
useEffect(() => {
  axios.get("/api/features").then(setList);
}, []);

// ✅ Call wrapper function
useEffect(() => {
  fetchClientList({ page: 1, pageSize: 20 }).then(setList);
}, []);
\`\`\`

## Error Handling

Each API function must handle exceptions, or the caller must try-catch. 

",
    "fileName": "api-patterns.mdc",
  },
  {
    "content": "---
description: Consult when designing features, adding modules, or making architectural decisions
alwaysApply: false
---


# Project Architecture

See also: @global-rules.mdc, @project-structure.mdc

## Architecture Pattern

Project architecture: standard layout (inferred from directory structure)



## Module Structure

- **\`src/\`** — Component module: source code

> See also @project-structure.mdc for detailed directory layout and responsibilities



## Core Code Patterns

- Uses custom component structure
- Uses zustand for state management

",
    "fileName": "architecture.mdc",
  },
  {
    "content": "---
description: Code style, formatting, and naming conventions derived from project config
alwaysApply: false
globs: **/*.{ts,tsx,js,jsx}
---


# Code Style

## Code Style (Project Config)

### Current Project Practices (from analysis)

Match the style of existing code when generating new code:

- **Variable declarations**: use const/let
- **Function style**: arrow functions
- **String quotes**: single quotes
- **Semicolons**: use

### Run After Code Generation

\`\`\`bash
# Type check
npm run type-check
\`\`\`



## Do / Don't

\`\`\`typescript
// DON'T: use any — loses type safety
function process(data: any) { return data.value; }

// DO: use precise types
function process(data: ProcessInput): ProcessOutput {
  return data.value;
}
\`\`\`

\`\`\`typescript
// DON'T: implicit typing + mutable default
var count = 0;

// DO: explicit types + prefer immutability
const count: number = 0;
\`\`\`


## Additional Best Practices

### Code Style:

Utilize TypeScript's type system fully: use interfaces, type aliases, and generics where appropriate

**Related Tech Stack**: TypeScript

",
    "fileName": "code-style.mdc",
  },
  {
    "content": "---
description: Consult before implementing features — lists project-specific hooks, utilities, and API clients that MUST be reused
alwaysApply: false
globs: src/store/**
---


# Project Custom Tools

See also: @global-rules.mdc

## Project Custom Tools (Prefer These)

### Custom Hooks

The project defines the following custom hooks — **always prefer them when generating code**:

**useUserStore** 
- Location: \`src/store/useUserStore.ts\`
- Usage frequency: Low ⚠️ Low frequency (only 1 usage(s) — prefer only when the use case clearly matches)
- Usage:
  \`\`\`typescript
  const result = useUserStore()
  \`\`\`

### Custom Utility Functions

The project defines the following utility functions — **always prefer them when generating code**:

**General**:
- \`safeFetch\` (src/utils/safeFetch.ts)
  \`\`\`typescript
  export async function safeFetch(url: string): Promise<unknown> 
  \`\`\`

### ⚠️ Important Rules

1. **Prefer project custom tools** — do not reimplement or introduce third-party alternatives
2. **Stay consistent** — use the same tools to keep code maintainable
3. **When adding new tools**, follow existing naming and organization conventions



---

*Use project tools to keep code consistent and avoid duplicate implementations.*
",
    "fileName": "custom-tools.mdc",
  },
  {
    "content": "---
description: Step-by-step recipe for adding a complete feature: types → API → store → component → route
alwaysApply: false
---


# End-to-End Feature Creation Guide

> When adding a complete feature, create files in this order to avoid gaps.
> Examples below use **Client** as a representative module — adapt names to your actual feature.

## Standard Steps

### 1. Type Definitions

\`\`\`ts
// src/types/client.ts
export interface ClientItem {
  id: string;
  name: string;
  // ...actual project fields
}

export interface ClientListParams {
  page: number;
  pageSize: number;
}
\`\`\`

### 2. API Functions

\`\`\`ts
// src/api/client.ts
import type { ClientItem, ClientListParams } from "@/types/client";


export const fetchClientList = (params: ClientListParams) => {
  return apiClient.get<ClientItem[]>("/clients", { params });
};
\`\`\`

### 3. Store（Zustand）

\`\`\`ts
// src/store/clientStore.ts
import { create } from "zustand";
import type { ClientItem } from "@/types/client";

interface ClientStore {
  items: ClientItem[];
  loading: boolean;
  fetchItems: () => Promise<void>;
}

export const useClientStore = create<ClientStore>((set) => ({
  items: [],
  loading: false,
  fetchItems: async () => {
    set({ loading: true });
    const items = await fetchClientList();
    set({ items, loading: false });
  },
}));
\`\`\`

### 4. Reusable Hook (Optional)

\`\`\`ts
// src/hooks/useClient.ts
export function useClient(id: string) {
  // Encapsulate data fetching, loading state, and error handling
  // Components call this directly; don't duplicate fetch logic
}
\`\`\`

### 5. Page Component

\`\`\`tsx
// src/pages/ClientList/ClientList.tsx
// Rendering only; business logic lives in Hook / Store
export function ClientList() {
  // 1. Get data from store/hook
  // 2. Handle loading / error states
  // 3. Render the list
}
\`\`\`

### 6. Route Registration

\`\`\`tsx
// src/index.tsx or route config file
{ path: "/clients", element: <ClientList /> }
{ path: "/clients/:id", element: <ClientDetail /> }
\`\`\`

## File Checklist

After adding a feature, confirm the following files were created/updated:

- [ ] \`src/types/client.ts\` — Type definitions
- [ ] \`src/api/client.ts\` — API functions
- [ ] \`src/store/clientStore.ts\` — Store
- [ ] \`src/hooks/useClient.ts\` — Data hook (optional)
- [ ] \`src/pages/ClientList/\` — Page component
- [ ] Route config updated

---

*Follow this pattern for project consistency. See @project-structure.mdc for actual directory locations.*
",
    "fileName": "feature-recipe.mdc",
  },
  {
    "content": "---
description: React Router routing organization, navigation patterns, and URL conventions
alwaysApply: false
globs: src/**
---


# Frontend Routing Guidelines

See also: @global-rules.mdc, @architecture.mdc

## Project Stack

**Routing system**: React Router  
**Route type**: Config-based routing (declarative)  
**Route location**: \`@src/\`

## Route Organization

**Organization pattern**: Centralized
**URL naming**: kebab-case
**File naming**: config-based

## Adding New Routes

### Adding a Route

1. Add a route definition in the route config directory \`src/\`
2. Create the corresponding page component

### Route Registration Format

\`\`\`tsx
// src/router/index.tsx or route config file
{
  path: '/feature-name',
  element: <FeatureName />,
}
\`\`\`



---

*Routing is the skeleton of the application — keep route structure clear.*
",
    "fileName": "frontend-routing.mdc",
  },
  {
    "content": "---
description: Project-wide conventions, tech stack, and core development principles. Always loaded.
alwaysApply: true
---

# react-full

You are an expert in React, TypeScript with deep knowledge of frontend development best practices.

## Tech Stack

**Primary**: React ^18.2.0, TypeScript ^5.4.0  
**Languages**: JavaScript, TypeScript  
**Package Manager**: npm  
**Frameworks**: React ^18.2.0  
**Key Libraries**: zustand ^4.5.0

## Commands

| Task | Command |
|------|---------|
| Build | \`npm run build\` |
| Test | \`npm run test\` |
| Type Check | \`npm run type-check\` |

## Hard Constraints

- NEVER use \`any\` type. Use \`unknown\` and narrow with type guards.
- NEVER swallow errors with empty catch blocks. Log and re-throw or handle explicitly.
- NEVER create duplicate utilities. Check @custom-tools.mdc before writing helpers.
- NEVER generate markdown documentation files — express intent through code, types, and naming.
- Before creating files, consult @project-structure.mdc for correct location.
- Reuse existing project tools — do not re-implement what already exists.
- Follow the project's established patterns and conventions.
- After writing code, run \`npm run type-check\` before considering the task complete.


- **React**: 
  - Use function components and Hooks; avoid class components
  - Keep components focused on a single responsibility
  - Use \`useMemo\` and \`useCallback\` judiciously for performance
  - Use TypeScript for type checking


## Rule Index

| Rule | Scope |
|------|-------|
| @code-style.mdc | Formatting and naming conventions |
| @project-structure.mdc | Directory layout and file placement |
| @architecture.mdc | Module structure and design patterns |
| @custom-tools.mdc | Project-specific hooks, utils, API clients |
| @state-management.mdc | State management conventions |
| @frontend-routing.mdc | Frontend routing patterns |
| @api-patterns.mdc | API call conventions and HTTP client usage |
| @feature-recipe.mdc | End-to-end guide for adding a new feature |
| @testing.mdc | Testing and verification commands |

",
    "fileName": "global-rules.mdc",
  },
  {
    "content": "---
description: Consult when creating new files or directories to determine correct location and naming conventions
alwaysApply: false
globs: **/index.{ts,tsx,js,jsx}
---


# Project Structure

See also: @global-rules.mdc

## 📁 Directory Tree

Main project directory structure:

\`\`\`text
└── src/ # source code
    ├── api/ # API definitions
    ├── pages/ # pages
    ├── store/ # state management
    └── utils/ # utilities
\`\`\`


## 📋 Directory Purpose Reference

Detailed purpose for important directories, including file types and naming conventions:

> 💡 See @code-style.mdc for naming conventions and code style

### \`src/api/\`

**Purpose**: API definitions

- Sample files: \`client.ts\`

### \`src/pages/\`

**Purpose**: pages — 1 files — component

- Sample files: \`Home.tsx\`

### \`src/store/\`

**Purpose**: state management

- Sample files: \`useUserStore.ts\`

### \`src/utils/\`

**Purpose**: utilities

- Sample files: \`safeFetch.ts\`


## 🎯 File Organization (Quick Reference)

Common file type locations for quick lookup:

### Utilities

**Location**: \`src/utils/\`

**Organization**: Group by concern (e.g. \`date.ts\`, \`validation.ts\`)

### API

**Location**: \`src/api/\`


## ✨ New File Guidelines

### File Location Decision Table

> When creating a new file, use this table to find the correct directory; if unsure, follow a similar existing file.

| File type | Location | Example filename |
|-----------|----------|------------------|
| Page / reusable component | \`src/pages/\` | \`UserList.tsx\` |
| Utility function | \`src/utils/\` | \`format.ts\`, \`validate.ts\` |
| API / Service | \`src/api/\` | \`user.api.ts\` |




---
*Before creating new files, see this file for correct directory locations and naming conventions.*
",
    "fileName": "project-structure.mdc",
  },
  {
    "content": "---
description: Consult when implementing state management, data flow, or zustand-related code
alwaysApply: false
globs: src/store/**
---


# State Management Guidelines

See also: @global-rules.mdc

## Zustand State Management

### Usage Guidelines

- Use create to create stores
- Keep stores flat
- Use immer middleware for complex state

---

*State management is core to the project — follow established patterns.*
",
    "fileName": "state-management.mdc",
  },
  {
    "content": "---
description: Testing patterns, organization, and best practices
alwaysApply: false
globs: **/*.{test,spec}.{ts,tsx,js,jsx}
---


# Testing

**Framework**: Vitest ^2.1.0
**Run tests**: \`npm run test\`
> 💡 **Base conventions**: See **@code-style.mdc** for test file naming and organization

## Testing Conventions

> 💡 **Full guidelines**: See **@testing.mdc** for the complete testing guide

### Testing Principles
- **Independence**: Each test should run independently without relying on other tests
- **Repeatability**: Results should be deterministic regardless of run order
- **Fast execution**: Unit tests should complete quickly
- **Clarity**: Tests should clearly express intent

### Quick Reference
- **Test files**: \`ComponentName.test.ts\` or \`ComponentName.spec.ts\`
- **AAA pattern**: Arrange → Act → Assert
- **Coverage target**: 80%+ coverage for core business logic
- **Priority**:
  1. Critical business logic
  2. Edge cases and error handling
  3. Complex algorithms and data transformations
- **Skip testing**:
  - Simple getters/setters
  - Third-party library behavior
  - Pure UI layout (use E2E tests instead)

### Mock and Stub
- Use mocks to isolate external dependencies
- Do not over-mock; keep tests meaningful
- Create mocks for API calls, database operations, and other I/O

\`\`\`typescript
// ✅ Good mock usage
const mockApiClient = {
  fetchUser: vi.fn().mockResolvedValue({ id: 1, name: 'John' })
};

// ❌ Over-mocking
const mockEverything = vi.fn(() => vi.fn(() => vi.fn()));
\`\`\`

### Test Types
- **Unit tests**: Test individual functions or classes
- **Integration tests**: Test collaboration across modules
- **E2E tests**: Test complete user flows

### Best Practices
- One test should verify one behavior
- Use meaningful assertion messages
- Failures should clearly indicate what went wrong
- Run tests regularly; don't let them go stale
- Fix failing tests immediately


",
    "fileName": "testing.mdc",
  },
]
`;

exports[`rules generation snapshots (refactor safety net) > produces stable rules for react-ts-app 1`] = `
[
  {
    "content": "---
description: Consult when designing features, adding modules, or making architectural decisions
alwaysApply: false
---


# Project Architecture

See also: @global-rules.mdc, @project-structure.mdc

## Architecture Pattern

Project architecture: standard layout (inferred from directory structure)



## Module Structure

- **\`src/\`** — Component module: source code

> See also @project-structure.mdc for detailed directory layout and responsibilities



## Core Code Patterns

- Uses custom component structure

",
    "fileName": "architecture.mdc",
  },
  {
    "content": "---
description: Code style, formatting, and naming conventions derived from project config
alwaysApply: false
globs: **/*.{ts,tsx,js,jsx}
---


# Code Style

## Code Style (Project Config)

### Project Config (Prettier)

This project uses Prettier for code formatting with the following settings:

- **Indentation**: 2 spaces
- **Quotes**: single quotes
- **Semicolons**: use semicolons
- **Line length**: 80 characters
- **Trailing commas**: all

**Config file**: @.prettierrc

### Formatting Requirements

Follow the Prettier settings above when generating code:
- Wrap strings in single quotes
- Indent with 2 spaces
- Include semicolons

### ESLint

### Run After Code Generation

\`\`\`bash
# Run lint
npm run lint

# Type check
npm run type-check
\`\`\`



## Do / Don't

\`\`\`typescript
// DON'T: use any — loses type safety
function process(data: any) { return data.value; }

// DO: use precise types
function process(data: ProcessInput): ProcessOutput {
  return data.value;
}
\`\`\`

\`\`\`typescript
// DON'T: implicit typing + mutable default
var count = 0;

// DO: explicit types + prefer immutability
const count: number = 0;
\`\`\`


## Additional Best Practices

### Code Style:

Utilize TypeScript's type system fully: use interfaces, type aliases, and generics where appropriate

**Related Tech Stack**: TypeScript

",
    "fileName": "code-style.mdc",
  },
  {
    "content": "---
description: Consult before implementing features — lists project-specific hooks, utilities, and API clients that MUST be reused
alwaysApply: false
globs: src/hooks/**
---


# Project Custom Tools

See also: @global-rules.mdc

## Project Custom Tools (Prefer These)

### Custom Hooks

The project defines the following custom hooks — **always prefer them when generating code**:

**useCounter** 
- Location: \`src/hooks/useCounter.ts\`
- Usage frequency: Medium (4 usage(s))
- Usage:
  \`\`\`typescript
  function useCounter()
  \`\`\`

### Custom Utility Functions

The project defines the following utility functions — **always prefer them when generating code**:

**Formatting**:
- \`formatName\` (src/utils/format.ts)
  \`\`\`typescript
  export function formatName(first: string, last: string): string 
  \`\`\`

### ⚠️ Important Rules

1. **Prefer project custom tools** — do not reimplement or introduce third-party alternatives
2. **Stay consistent** — use the same tools to keep code maintainable
3. **When adding new tools**, follow existing naming and organization conventions



---

*Use project tools to keep code consistent and avoid duplicate implementations.*
",
    "fileName": "custom-tools.mdc",
  },
  {
    "content": "---
description: Step-by-step recipe for adding a complete feature: types → API → component → route
alwaysApply: false
---


# End-to-End Feature Creation Guide

> When adding a complete feature, create files in this order to avoid gaps.
> Examples below use **Feature** as a representative module — adapt names to your actual feature.

## Standard Steps

### 1. Type Definitions

\`\`\`ts
// src/types/feature.ts
export interface FeatureItem {
  id: string;
  name: string;
  // ...actual project fields
}

export interface FeatureListParams {
  page: number;
  pageSize: number;
}
\`\`\`

### 2. API Functions

\`\`\`ts
// src/api/feature.ts
import type { FeatureItem, FeatureListParams } from "@/types/feature";


export const fetchFeatureList = (params: FeatureListParams) => {
  return fetch(\`/api/features?page=\${params.page}\`);
};
\`\`\`

### 3. Reusable Hook (Optional)

\`\`\`ts
// src/hooks/useFeature.ts
export function useFeature(id: string) {
  // Encapsulate data fetching, loading state, and error handling
  // Components call this directly; don't duplicate fetch logic
}
\`\`\`

### 4. Page Component

\`\`\`tsx
// src/components/FeatureList/FeatureList.tsx
// Rendering only; business logic lives in Hook / Store
export function FeatureList() {
  // 1. Get data from store/hook
  // 2. Handle loading / error states
  // 3. Render the list
}
\`\`\`

### 5. Route Registration

\`\`\`tsx
// src/routes/index.tsx or route config file
{ path: "/features", element: <FeatureList /> }
{ path: "/features/:id", element: <FeatureDetail /> }
\`\`\`

## File Checklist

After adding a feature, confirm the following files were created/updated:

- [ ] \`src/types/feature.ts\` — Type definitions
- [ ] \`src/api/feature.ts\` — API functions
- [ ] \`src/hooks/useFeature.ts\` — Data hook (optional)
- [ ] \`src/components/FeatureList/\` — Page component
- [ ] Route config updated

---

*Follow this pattern for project consistency. See @project-structure.mdc for actual directory locations.*
",
    "fileName": "feature-recipe.mdc",
  },
  {
    "content": "---
description: Project-wide conventions, tech stack, and core development principles. Always loaded.
alwaysApply: true
---

# react-ts-app

You are an expert in React, TypeScript with deep knowledge of frontend development best practices.

## Tech Stack

**Primary**: React ^18.2.0, TypeScript ^5.4.0  
**Languages**: JavaScript, TypeScript  
**Package Manager**: npm  
**Frameworks**: React ^18.2.0

## Commands

| Task | Command |
|------|---------|
| Build | \`npm run build\` |
| Lint | \`npm run lint\` |
| Type Check | \`npm run type-check\` |

## Hard Constraints

- NEVER use \`any\` type. Use \`unknown\` and narrow with type guards.
- NEVER swallow errors with empty catch blocks. Log and re-throw or handle explicitly.
- NEVER create duplicate utilities. Check @custom-tools.mdc before writing helpers.
- NEVER generate markdown documentation files — express intent through code, types, and naming.
- Before creating files, consult @project-structure.mdc for correct location.
- Reuse existing project tools — do not re-implement what already exists.
- Follow the project's established patterns and conventions.
- After writing code, run \`npm run lint\` and \`npm run type-check\` before considering the task complete.


- **React**: 
  - Use function components and Hooks; avoid class components
  - Keep components focused on a single responsibility
  - Use \`useMemo\` and \`useCallback\` judiciously for performance
  - Use TypeScript for type checking


## Rule Index

| Rule | Scope |
|------|-------|
| @code-style.mdc | Formatting and naming conventions |
| @project-structure.mdc | Directory layout and file placement |
| @architecture.mdc | Module structure and design patterns |
| @custom-tools.mdc | Project-specific hooks, utils, API clients |
| @feature-recipe.mdc | End-to-end guide for adding a new feature |
| @testing.mdc | Testing and verification commands |

",
    "fileName": "global-rules.mdc",
  },
  {
    "content": "---
description: Consult when creating new files or directories to determine correct location and naming conventions
alwaysApply: false
globs: **/index.{ts,tsx,js,jsx}
---


# Project Structure

See also: @global-rules.mdc

## 📁 Directory Tree

Main project directory structure:

\`\`\`text
└── src/ # source code
    ├── components/ # shared components
    ├── hooks/ # logic reuse
    └── utils/ # utilities
\`\`\`


## 📋 Directory Purpose Reference

Detailed purpose for important directories, including file types and naming conventions:

> 💡 See @code-style.mdc for naming conventions and code style

### \`src/components/\`

**Purpose**: shared components

- Sample files: \`Button.tsx\`

### \`src/hooks/\`

**Purpose**: logic reuse

- Sample files: \`useCounter.ts\`

### \`src/utils/\`

**Purpose**: utilities

- Sample files: \`format.ts\`


## 🎯 File Organization (Quick Reference)

Common file type locations for quick lookup:

### Components

**Location**: \`src/components/\`

**Naming conventions**: PascalCase


### Utilities

**Location**: \`src/utils/\`

**Organization**: Group by concern (e.g. \`date.ts\`, \`validation.ts\`)

### Hooks

**Location**: \`src/hooks/\`


## ✨ New File Guidelines

### File Location Decision Table

> When creating a new file, use this table to find the correct directory; if unsure, follow a similar existing file.

| File type | Location | Example filename |
|-----------|----------|------------------|
| Component (incl. pages) | \`src/components/\` | \`UserList.tsx\` |
| Utility function | \`src/utils/\` | \`format.ts\`, \`validate.ts\` |
| Custom hook | \`src/hooks/\` | \`useXxx.ts\` |




---
*Before creating new files, see this file for correct directory locations and naming conventions.*
",
    "fileName": "project-structure.mdc",
  },
  {
    "content": "---
description: Testing recommendations for the project
alwaysApply: false
globs: **/*.{test,spec}.{ts,tsx,js,jsx}
---


# Testing

## Verification

| Task | Command |
|------|---------|
| Lint | \`npm run lint\` |
| Type Check | \`npm run type-check\` |

Run these commands after code changes to verify correctness.

> ⚠️ No test framework configured. When adding tests, follow the project's tech stack conventions.


",
    "fileName": "testing.mdc",
  },
]
`;
